authentik/ha/zalando-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  namespace: zalando-op
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
    - host: zalando.silverycat.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  postgres-operator-ui
                port:
                  number: 80
